[gd_scene load_steps=10 format=3 uid="uid://cqyyqs4xdmbad"]

[ext_resource type="Script" uid="uid://b73qxu7eawdgf" path="res://experiments/dice_roll_physics_base/dice_board.gd" id="1_1yj15"]
[ext_resource type="Shader" uid="uid://cccjkqsh3osro" path="res://common/backgrounds/move_uv.gdshader" id="1_7uhnn"]
[ext_resource type="Texture2D" uid="uid://mr5hsc78263j" path="res://common/backgrounds/art/triangles.png" id="2_1yj15"]
[ext_resource type="PackedScene" uid="uid://dutrixl5ljwbw" path="res://experiments/dice_roll_physics_base/physics_dice.tscn" id="3_1yj15"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x1530"]
shader = ExtResource("1_7uhnn")
shader_parameter/dir = Vector2(-1, -1)
shader_parameter/speed = 0.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7uhnn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0.7919124, 0, 0, 1)
anti_aliasing = false

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1yj15"]
bounce = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yj15"]
size = Vector2(256, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2s3lp"]
size = Vector2(16, 225)

[node name="DiceBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1yj15")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_x1530")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1yj15")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Board" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_7uhnn")

[node name="Collision" type="StaticBody2D" parent="Board"]
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_1yj15")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board/Collision"]
position = Vector2(128, 8)
shape = SubResource("RectangleShape2D_1yj15")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Board/Collision"]
position = Vector2(128, 248)
shape = SubResource("RectangleShape2D_1yj15")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Board/Collision"]
position = Vector2(8, 127.5)
shape = SubResource("RectangleShape2D_2s3lp")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Board/Collision"]
position = Vector2(248, 127.5)
shape = SubResource("RectangleShape2D_2s3lp")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(260, 242)

[node name="RollAnchor" type="Marker2D" parent="."]
position = Vector2(407, 92)

[node name="PhysicsDice" parent="." instance=ExtResource("3_1yj15")]
position = Vector2(328, 176)
